fixed overflow on image

--- a/src/components/ComingSoon/ComingSoon.module.css
+++ b/src/components/ComingSoon/ComingSoon.module.css
@@ -1,24 +1,36 @@
 .wrapper {
-  display: flex;
-  justify-content: flex-start;
+    display: flex;
+    /* align-items: baseline; */
+    justify-content: flex-start;
+    flex-direction: column;
 }
 
 .form {
-  display: flex;
-  align-items: center;
-  margin-left: 2em;
+    display: flex;
+    align-items: center;
+    padding: 1em 0;
 }
 
 .comingSoonText {
-  color: #ffd836;
-  font-family: var(--body-font);
-  font-size: 2em;
+    /* color: #ffd836; */
+    color: var(--primary-color);
+    font-family: var(--body-font);
+    font-size: 2em;
 }
 
 .emailInput {
-  margin-right: 2em;
-  height: 4em;
-  width: 300px;
-  display: inline-flex;
-  border-radius: 3px;
+    /* margin-right: 2em; */
+    margin: 3px 23px 3px 3px;
+    height: 3em;
+    width: 300px;
+    display: inline-flex;
+    border-radius: 3px;
+    padding-left: 0.5em;
+    font-size: 1.6em;
+}
+
+.emailInput:focus {
+    outline: none;
+    border: 3px solid var(--primary-color);
+    height: 2.7em;
 }
